Grid justify/align-items default to “normal” (Safari fix)

--- a/styleguide/scss/core/_core-grid.scss
+++ b/styleguide/scss/core/_core-grid.scss
@@ -101,7 +101,7 @@
     --sf-elas-auto-rows: var(--sf-desk-auto-rows);
     --sf-grid-auto-rows: var(--sf-zero-auto-rows);
 
-    --sf-align-items: initial;
+    --sf-align-items: normal;
     --sf-zero-align-items: var(--sf-align-items);
     --sf-phab-align-items: var(--sf-zero-align-items);
     --sf-tabp-align-items: var(--sf-phab-align-items);
@@ -111,7 +111,7 @@
     --sf-elas-align-items: var(--sf-desk-align-items);
     --sf-grid-align-items: var(--sf-zero-align-items);
 
-    --sf-vertical-align-items: initial;
+    --sf-vertical-align-items: normal;
     --sf-zero-vertical-align-items: var(--sf-vertical-align-items);
     --sf-phab-vertical-align-items: var(--sf-zero-vertical-align-items);
     --sf-tabp-vertical-align-items: var(--sf-phab-vertical-align-items);
